Другой Base64 decoder